--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div class="grid-container">
     <div style="background-color: #00FF7F;height: 190px; text-align: center;position: relative;">
         <div style="height:150px;margin: 0;position: absolute;top: 50%;left: 50%;-ms-transform: translate(-50%, -50%);transform: translate(-50%, -50%);">
-            <img src="img/fot1/planta_intro.png" />
+            <img zoom-in-up src="img/fot1/planta_intro.png" />
             <h4 class="subtitulo">Once tecnologías para una</h4>
             <h1 class="titulo">CAFICULTURA SOSTENIBLE</h1>
         </div>
@@ -47,11 +47,11 @@
             </div>
         </div>
     </div>
-    <!----- FOTOGRAMA 02 ----->
+    <!----- FOTOGRAMA 02 data-aos="fade-up" data-aos-duration="3000" ----->
     <div id="sec2" class="grid-sub-container" style="background-color: white;height: 440px">
         <div style="background-color: transparent;position: relative;width:510px;height: 430px;max-width: 100%;margin: 0 auto;">
             <img src="img/fot2/fot2_ESTATICO.png" class="img-puestas" style="top:10%;left: 8%;" />
-            <img data-aos="fade-up" data-aos-duration="3000" src="img/fot2/fot2_plantaCRECER.png" class="img-puestas" style="top:61%;left: 17%;" />
+            <img id="plantaFt2" height="40px"  src="img/fot2/fot2_plantaCRECER.png" class="img-puestas" style="top:61%;left: 17%;" />
         </div>
         <div style="background-color: transparent;width:510px;height: 430px;">
             <p class="textoCudadrado">
