--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <div id="sec1" class="grid-sub-container" style="background-color: #eeeeee;height: 480px">
         <div style="background-color: transparent;position: relative;width:510px;height: 470px;max-width: 100%;margin: 0 auto;">
             <img src="img/fot1/fot1_ESTATICO.png" class="img-puestas" style="top:10%;left: 9%;" />
-            <img data-aos="flip-down" src="img/fot1/fot1_plantaCRECER.png" class="img-puestas" style="top:42%;left: 60%;" id="plantacrecer" />
-            <img data-aos="flip-down" src="img/fot1/fot1_plantaCRECER.png" class="img-puestas" style="top:56.5%;left: 59.5%;" />
+            <img id="Planta1Ft1" height="40px" src="img/fot1/fot1_plantaCRECER.png" class="img-puestas" style="top:50%;left: 63.5%;" />
+            <img id="Planta2Ft1" height="40px" src="img/fot1/fot1_plantaCRECER.png" class="img-puestas" style="top:64.5%;left: 63%;" />
         </div>
         <div style="background-color: transparent;width:510px;height: 470px;">
             <p class="textoCudadrado">
