--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
             <img src="img/fot3/fot3_ESTATICO.png" class="img-puestas" style="top:20%;left: 12%;z-index: 3;"/>
             <img src="img/fot3/fot3_objeto1_ESTATICO.png" class="img-puestas" style="top:19%;left: 41%;"/>
             <img src="img/fot3/fot3_objeto2_ESTATICO.png" class="img-puestas" style="top:71%;left: 6%;"/>
-            <img src="img/fot3/fot3_mujer1_mano2atras.png" class="img-puestas" style="top:34.9%;left: 35.2%;z-index: 2;"/>
-            <img src="img/fot3/fot3_mujer1_mano1.png" class="img-puestas" style="top:35%;left: 25.1%;z-index: 4;"/>
+            <img id="mano1Ft3" src="img/fot3/fot3_mujer1_mano2atras.png" class="img-puestas" style="top:34.9%;left: 35.2%;z-index: 2;"/>
+            <img id="mano2Ft3" src="img/fot3/fot3_mujer1_mano1.png" class="img-puestas" style="top:35%;left: 25.1%;z-index: 4;"/>
         </div>
         <div style="background-color: transparent;width:510px;height: 540px">
             <div style="background-color: transparent;text-align: right;">
