--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
     <div id="sec4" class="grid-sub-container" style="background-color: white;height: 550px">
         <div style="background-color: transparent;position: relative;width:510px;height: 520px;max-width: 100%;margin: 0 auto;">
             <img src="img/fot4/fot4_ESTATICO.png" id="TallosFot4" class="img-puestas" style="top:48%;left: 10%;" />
-            <img src="img/fot4/fot4_planta1.png" id="Planta1Fot4" class="img-puestas" style="top:29.5%;left: 34%;z-index: 2;" />
-            <img src="img/fot4/fot4_planta2.png" id="Planta2Fot4" class="img-puestas" style="top:10%;left: 40.5%;z-index: 1;" />
-            <img src="img/fot4/fot4_planta3.png" id="Planta3AFot4" class="img-puestas" style="top:49.5%;left: 17.1%;" />
-            <img src="img/fot4/fot4_planta3.png" id="Planta3BFot4" class="img-puestas" style="top:65.8%;left: 12.8%;" />
-            <img src="img/fot4/fot4_planta4.png" id="Planta4AFot4" class="img-puestas" style="top:66%;left: 66%;" />
+            <img id="PlantaGra1Ft4" src="img/fot4/fot4_planta1.png" id="Planta1Fot4" class="img-puestas" style="top:29.5%;left: 34%;z-index: 2;" />
+            <img id="PlantaGra2Ft4" src="img/fot4/fot4_planta2.png" id="Planta2Fot4" class="img-puestas" style="top:10%;left: 40.5%;z-index: 1;" />
+            <img id="Planta1Ft4" src="img/fot4/fot4_planta3.png" id="Planta3AFot4" class="img-puestas" style="top:49.5%;left: 17.1%;" />
+            <img id="Planta2Ft4" src="img/fot4/fot4_planta3.png" id="Planta3BFot4" class="img-puestas" style="top:65.8%;left: 12.8%;" />
+            <img id="Planta3Ft4" src="img/fot4/fot4_planta4.png" id="Planta4AFot4" class="img-puestas" style="top:66%;left: 66%;" />
         </div>
         <div style="background-color: transparent;width:510px;height: 540px">
             <div style="background-color: transparent;text-align: right">
@@ -154,13 +154,13 @@
         </div>
     </div>
     <!----- FOTOGRAMA 05 ----->
-    <div class="grid-sub-container" style="background-color:#eeeeee;height: 550px">
+    <div id="sec5" class="grid-sub-container" style="background-color:#eeeeee;height: 550px">
         <div style="background-color: transparent;position: relative;width:510px;height: 520px;max-width: 100%;margin: 0 auto;">
             <img src="img/fot5/fot5_ESTATICO.png" class="img-puestas" style="top:17%;left: 10%;" />
-            <img src="img/fot5/fot5_arbol1.png" class="img-puestas" style="top:2.2%;left: 4.1%;" />
-            <img src="img/fot5/fot5_cafe.png" class="img-puestas" style="top:59%;left: 58.8%;" />
-            <img src="img/fot5/fot5_planta1.png" class="img-puestas" style="top:83%;left:46%" />
-            <img src="img/fot5/fot5_planta2.png" class="img-puestas" style="top:83%;left: 79.7%"/>
+            <img id="arbolFt5" src="img/fot5/fot5_arbol1.png" class="img-puestas" style="top:2.2%;left: 4.1%;" />
+            <img id="arboitoFt5" src="img/fot5/fot5_cafe.png" class="img-puestas" style="top:59%;left: 58.8%;" />
+            <img id="planta1Ft5" src="img/fot5/fot5_planta1.png" class="img-puestas" style="top:83%;left:46%" />
+            <img id="planta2Ft5" src="img/fot5/fot5_planta2.png" class="img-puestas" style="top:83%;left: 79.7%"/>
         </div>
         <div style="background-color: transparent;width:510px;height: 540px">
             <div style="background-color: transparent;text-align: right">
@@ -201,7 +201,7 @@
         </div>
     </div>
     <!----- FOTOGRAMA 06 ----->
-    <div class="grid-sub-container" style="background-color:white;height: 530px">
+    <div id="sec6" class="grid-sub-container" style="background-color:white;height: 530px">
         <div style="background-color: transparent;position: relative;width:510px;height: 520px;max-width: 100%;margin: 0 auto;">
             <img src="img/fot6/fot6_mujer_ESTATICO.png" class="img-puestas" style="top:0%;left: 0%;" />
             <img src="img/fot6/fot6_brazoDER.png" class="img-puestas" style="top:0%;left: 0%;" />
@@ -239,7 +239,7 @@
         </div>
     </div>
     <!----- FOTOGRAMA 07 ----->
-    <div class="grid-sub-container" style="background-color:#eeeeee;height: 530px">
+    <div id="sec7" class="grid-sub-container" style="background-color:#eeeeee;height: 530px">
         <div style="background-color: transparent;position: relative;width:510px;height: 520px;max-width: 100%;margin: 0 auto;">
             <img src="img/fot7/fot7_mujer_ESTATICO.png" class="img-puestas" style="top:0%;left: 0%;" />
             <img src="img/fot7/fot7_brazoDER.png" class="img-puestas" style="top:0%;left: 0%;" />
@@ -276,7 +276,7 @@
         </div>
     </div>
     <!----- FOTOGRAMA 08 ----->
-    <div class="grid-sub-container" style="background-color:white;height: 530px">
+    <div id="sec8" class="grid-sub-container" style="background-color:white;height: 530px">
         <div style="background-color: transparent;position: relative;width:510px;height: 520px;max-width: 100%;margin: 0 auto;">
             <img src="img/fot8/fot8_mujer-fondo_ESTATICO.png" class="img-puestas" style="top:0%;left: 0%;" />
             <img src="img/fot8/fot8_mujer.png" class="img-puestas" style="top:0%;left: 0%;" />
@@ -311,7 +311,7 @@
         </div>
     </div>
     <!----- FOTOGRAMA 09 ----->
-    <div class="grid-sub-container" style="background-color:#eeeeee;height: 530px">
+    <div id="sec9" class="grid-sub-container" style="background-color:#eeeeee;height: 530px">
         <div style="background-color: transparent;position: relative;width:510px;height: 520px;max-width: 100%;margin: 0 auto;">
             <img src="img/fot9/fot9_mujer_ESTATICO.png" class="img-puestas" style="top:0%;left: 0%;" />
             <img src="img/fot9/fot9_brazoDER.png" class="img-puestas" style="top:0%;left: 0%;" />
@@ -348,7 +348,7 @@
         </div>
     </div>
     <!----- FOTOGRAMA 10 ----->
-    <div class="grid-sub-container" style="background-color:white;height: 530px">
+    <div id="sec10" class="grid-sub-container" style="background-color:white;height: 530px">
         <div style="background-color: transparent;position: relative;width:510px;height: 520px;max-width: 100%;margin: 0 auto;">
             <img src="img/fot10/fot10_mujer_ESTATICO.png" class="img-puestas" style="top:0%;left: 0%;" />
             <img src="img/fot10/fot10_cafecitofruto.png" class="img-puestas" style="top:0%;left: 0%;" />
@@ -378,7 +378,7 @@
         </div>
     </div>
     <!----- FOTOGRAMA 11 ----->
-    <div class="grid-sub-container" style="background-color:#eeeeee;height: 530px">
+    <div id="sec11" class="grid-sub-container" style="background-color:#eeeeee;height: 530px">
         <div style="background-color: transparent;position: relative;width:510px;height: 520px;max-width: 100%;margin: 0 auto;">
             <img src="img/fot11/fot11_mujer_ESTATICO.png" class="img-puestas" style="top:0%;left: 0%;" />
             <img src="img/fot11/fot11_brazoconTIJERA1.png" class="img-puestas" style="top:0%;left: 0%;" />
@@ -411,7 +411,7 @@
         </div>
     </div>
     <!----- FOTOGRAMA 12 ----->
-    <div class="grid-sub-container" style="background-color:white;height: 530px">
+    <div id="sec12" class="grid-sub-container" style="background-color:white;height: 530px">
         <div style="background-color: transparent;position: relative;width:510px;height: 520px;max-width: 100%;margin: 0 auto;">
             <img src="img/fot12/fot12_mujer_ESTATICO.png" class="img-puestas" style="top:0%;left: 0%;" />
             <img src="img/fot12/fot12_brazos.png" class="img-puestas" style="top:0%;left: 0%;" />
@@ -442,7 +442,7 @@
         </div>
     </div>
     <!----- FOTOGRAMA 13 ----->
-    <div class="grid-sub-container" style="background-color:#eeeeee;height: 530px">
+    <div id="sec13" class="grid-sub-container" style="background-color:#eeeeee;height: 530px">
         <div style="background-color: transparent;position: relative;width:510px;height: 520px;max-width: 100%;margin: 0 auto;">
             <img src="img/fot13/fot13_mujer_ESTATICO.png" class="img-puestas" style="top:0%;left: 0%;" />
             <img src="img/fot13/fot13_agua.png" class="img-puestas" style="top:0%;left: 0%;" />
@@ -480,7 +480,7 @@
         </div>
     </div>
     <!----- FOTOGRAMA 14 ----->
-    <div class="grid-sub-container" style="background-color:white;height: 510px">
+    <div id="sec14" class="grid-sub-container" style="background-color:white;height: 510px">
         <div style="background-color: transparent;position: relative;width:510px;height: 505px;max-width: 100%;margin: 0 auto;">
             <img src="img/fot14/fot14_mujer_ESTATICO.png" class="img-puestas" style="top:0%;left: 0%;" />
             <img src="img/fot14/fot14_brazos.png" class="img-puestas" style="top:0%;left: 0%;" />
@@ -508,7 +508,7 @@
         </div>
     </div>
     <!----- FOTOGRAMA 15 ----->
-    <div class="grid-sub-container" style="background-color:#eeeeee;height: 490px">
+    <div id="sec15" class="grid-sub-container" style="background-color:#eeeeee;height: 490px">
         <div style="background-color: transparent;position: relative;width:510px;height: 480px;max-width: 100%;margin: 0 auto;">
             <img src="img/fot15/fot15_taza_ESTATICO.png" class="img-puestas" style="top:0%;left: 0%;" />
             <img src="img/fot15/fot15_humo.png" class="img-puestas" style="top:0%;left: 0%;" />
