--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         </div>
     </div>
     <!----- FOTOGRAMA 02 data-aos="fade-up" data-aos-duration="3000" ----->
-    <div id="sec2" class="grid-sub-container" style="background-color: white;height: 440px">
-        <div style="background-color: transparent;position: relative;width:510px;height: 430px;max-width: 100%;margin: 0 auto;">
+    <div class="grid-sub-container" style="background-color: white;height: 440px">
+        <div id="sec2" style="background-color: transparent;position: relative;width:510px;height: 430px;max-width: 100%;margin: 0 auto;">
             <img src="img/fot2/fot2_ESTATICO.png" class="img-puestas" style="top:10%;left: 8%;" />
             <img id="plantaFt2" height="40px"  src="img/fot2/fot2_plantaCRECER.png" class="img-puestas" style="top:70%;left: 20%;" />
         </div>
@@ -203,11 +203,11 @@
     <!----- FOTOGRAMA 06 ----->
     <div id="sec6" class="grid-sub-container" style="background-color:white;height: 530px">
         <div style="background-color: transparent;position: relative;width:510px;height: 520px;max-width: 100%;margin: 0 auto;">
-            <img src="img/fot6/fot6_mujer_ESTATICO.png" class="img-puestas" style="top:0%;left: 0%;" />
-            <img src="img/fot6/fot6_brazoDER.png" class="img-puestas" style="top:0%;left: 0%;" />
-            <img src="img/fot6/fot6_brazoIZQ.png" class="img-puestas" style="top:0%;left: 0%;" />
-            <img src="img/fot6/fot6_tierra.png" class="img-puestas" style="top:0%;left: 0%;" />
-            <img src="img/fot6/fot6_tierra1.png" class="img-puestas" style="top:0%;left: 0%;" />
+            <img src="img/fot6/fot6_mujer_ESTATICO.png" class="img-puestas" style="top:30%;left: 2%;z-index: 2;" />
+            <img src="img/fot6/fot6_brazoDER.png" class="img-puestas" style="top:39.3%;left: 9.8%; z-index: 4;" />
+            <img src="img/fot6/fot6_brazoIZQ.png" class="img-puestas" style="top:39.4%;left: 15.3%; z-index: 1;" />
+            <img src="img/fot6/fot6_tierra.png" class="img-puestas" style="top:50%;left: 33%; z-index: 3" />
+            <img src="img/fot6/fot6_tierra1.png" class="img-puestas" style="top:73%;left: 62%;z-index: 4;" />
         </div>
         <div style="background-color: transparent;width:510px;height: 520px">
             <div style="background-color: transparent;text-align: right">
@@ -241,10 +241,10 @@
     <!----- FOTOGRAMA 07 ----->
     <div id="sec7" class="grid-sub-container" style="background-color:#eeeeee;height: 530px">
         <div style="background-color: transparent;position: relative;width:510px;height: 520px;max-width: 100%;margin: 0 auto;">
-            <img src="img/fot7/fot7_mujer_ESTATICO.png" class="img-puestas" style="top:0%;left: 0%;" />
-            <img src="img/fot7/fot7_brazoDER.png" class="img-puestas" style="top:0%;left: 0%;" />
-            <img src="img/fot7/fot7_brazoIZQ.png" class="img-puestas" style="top:0%;left: 0%;" />
-            <img src="img/fot7/fot7_tierraABAJO.png" class="img-puestas" style="top:0%;left: 0%;" />
+            <img src="img/fot7/fot7_mujer_ESTATICO.png" class="img-puestas" style="top:26%;left: 10.3%;z-index: 2;" />
+            <img src="img/fot7/fot7_brazoDER.png" class="img-puestas" style="top:36.2%;left: 32.1%;z-index: 3;" />
+            <img src="img/fot7/fot7_brazoIZQ.png" class="img-puestas" style="top:36%;left: 41.5%;z-index: 1;" />
+            <img src="img/fot7/fot7_tierraABAJO.png" class="img-puestas" style="top:77.5%;left: 53%; z-index: 4;" />
             <img src="img/fot7/fot7_tierraARRIBA.png" class="img-puestas" style="top:0%;left: 0%;" />
         </div>
         <div style="background-color: transparent;width:510px;height: 520px">
@@ -278,10 +278,10 @@
     <!----- FOTOGRAMA 08 ----->
     <div id="sec8" class="grid-sub-container" style="background-color:white;height: 530px">
         <div style="background-color: transparent;position: relative;width:510px;height: 520px;max-width: 100%;margin: 0 auto;">
-            <img src="img/fot8/fot8_mujer-fondo_ESTATICO.png" class="img-puestas" style="top:0%;left: 0%;" />
-            <img src="img/fot8/fot8_mujer.png" class="img-puestas" style="top:0%;left: 0%;" />
-            <img src="img/fot8/fot8_planta_creciendo.png" class="img-puestas" style="top:0%;left: 0%;" />
-            <img src="img/fot8/fot8_tronco1.png" class="img-puestas" style="top:0%;left: 0%;" />
+            <img src="img/fot8/fot8_mujer-fondo_ESTATICO.png" class="img-puestas" style="top:40%;left: 10%;" />
+            <img src="img/fot8/fot8_mujer.png" class="img-puestas" style="top:35%;left: 38%;z-index: 2;" />
+            <img src="img/fot8/fot8_planta_creciendo.png" class="img-puestas" height="170px" style="top:36.2%;left: 17%;" />
+            <img src="img/fot8/fot8_tronco1.png" class="img-puestas" style="top:47.5%;left: 37%;z-index: 1;" />
             <img src="img/fot8/fot8_tronco2.png" class="img-puestas" style="top:0%;left: 0%;" />
         </div>
         <div style="background-color: transparent;width:510px;height: 520px">
@@ -313,10 +313,10 @@
     <!----- FOTOGRAMA 09 ----->
     <div id="sec9" class="grid-sub-container" style="background-color:#eeeeee;height: 530px">
         <div style="background-color: transparent;position: relative;width:510px;height: 520px;max-width: 100%;margin: 0 auto;">
-            <img src="img/fot9/fot9_mujer_ESTATICO.png" class="img-puestas" style="top:0%;left: 0%;" />
-            <img src="img/fot9/fot9_brazoDER.png" class="img-puestas" style="top:0%;left: 0%;" />
-            <img src="img/fot9/fot9_brazoIZQ.png" class="img-puestas" style="top:0%;left: 0%;" />
-            <img src="img/fot9/fot9_mochila_ESTATICO.png" class="img-puestas" style="top:0%;left: 0%;" />
+            <img src="img/fot9/fot9_mujer_ESTATICO.png" class="img-puestas" style="top:26%;left: 10%;z-index: 4;" />
+            <img src="img/fot9/fot9_brazoDER.png" class="img-puestas" style="top:37%;left: 64%;z-index: 1;" />
+            <img src="img/fot9/fot9_brazoIZQ.png" class="img-puestas" style="top:34%;left: 11%;z-index: 5;" />
+            <img src="img/fot9/fot9_mochila_ESTATICO.png" class="img-puestas" style="top:35.2%;left: 82.3%;z-index: 6;" />
         </div>
         <div style="background-color: transparent;width:510px;height: 520px">
             <div style="background-color: transparent;text-align: right">
@@ -350,9 +350,9 @@
     <!----- FOTOGRAMA 10 ----->
     <div id="sec10" class="grid-sub-container" style="background-color:white;height: 530px">
         <div style="background-color: transparent;position: relative;width:510px;height: 520px;max-width: 100%;margin: 0 auto;">
-            <img src="img/fot10/fot10_mujer_ESTATICO.png" class="img-puestas" style="top:0%;left: 0%;" />
-            <img src="img/fot10/fot10_cafecitofruto.png" class="img-puestas" style="top:0%;left: 0%;" />
-            <img src="img/fot10/fot10_mujerBRAZO.png" class="img-puestas" style="top:0%;left: 0%;" />
+            <img src="img/fot10/fot10_mujer_ESTATICO.png" class="img-puestas" style="top:20%;left: 12%;z-index: 2;" />
+            <img src="img/fot10/fot10_cafecitofruto.png" class="img-puestas" style="top:40%;left: 34%;z-index: 3;" />
+            <img src="img/fot10/fot10_mujerBRAZO.png" class="img-puestas" style="top:31%;left: 28.5%;z-index: 1;" />
         </div>
         <div style="background-color: transparent;width:510px;height: 520px">
             <div style="background-color: transparent;text-align: right">
@@ -380,12 +380,12 @@
     <!----- FOTOGRAMA 11 ----->
     <div id="sec11" class="grid-sub-container" style="background-color:#eeeeee;height: 530px">
         <div style="background-color: transparent;position: relative;width:510px;height: 520px;max-width: 100%;margin: 0 auto;">
-            <img src="img/fot11/fot11_mujer_ESTATICO.png" class="img-puestas" style="top:0%;left: 0%;" />
-            <img src="img/fot11/fot11_brazoconTIJERA1.png" class="img-puestas" style="top:0%;left: 0%;" />
-            <img src="img/fot11/fot11_brazoconTIJERA2.png" class="img-puestas" style="top:0%;left: 0%;" />
-            <img src="img/fot11/fot11_hojas1.png" class="img-puestas" style="top:0%;left: 0%;" />
-            <img src="img/fot11/fot11_hojas2CAYENDOSE.png" class="img-puestas" style="top:0%;left: 0%;" />
-            <img src="img/fot11/fot11_tijeraCIRCULO.png" class="img-puestas" style="top:0%;left: 0%;" />
+            <img src="img/fot11/fot11_mujer_ESTATICO.png" class="img-puestas" style="top:20%;left: 10%;" />
+            <img src="img/fot11/fot11_brazoconTIJERA1.png" class="img-puestas" style="top:42%;left: 24%;" />
+            <img src="img/fot11/fot11_brazoconTIJERA2.png" class="img-puestas" style="top:38.2%;left: 32.5%;" />
+            <img src="img/fot11/fot11_hojas1.png" class="img-puestas" style="top:36%;left: 44%;" />
+            <img src="img/fot11/fot11_hojas2CAYENDOSE.png" class="img-puestas" style="top:50%;left: 43%;" />
+            <img src="img/fot11/fot11_tijeraCIRCULO.png" class="img-puestas" style="top:46.7%;left: 44%;z-index: 4;" />
         </div>
         <div style="background-color: transparent;width:510px;height: 520px">
             <div style="background-color: transparent;text-align: right">
@@ -413,8 +413,8 @@
     <!----- FOTOGRAMA 12 ----->
     <div id="sec12" class="grid-sub-container" style="background-color:white;height: 530px">
         <div style="background-color: transparent;position: relative;width:510px;height: 520px;max-width: 100%;margin: 0 auto;">
-            <img src="img/fot12/fot12_mujer_ESTATICO.png" class="img-puestas" style="top:0%;left: 0%;" />
-            <img src="img/fot12/fot12_brazos.png" class="img-puestas" style="top:0%;left: 0%;" />
+            <img src="img/fot12/fot12_mujer_ESTATICO.png" class="img-puestas" style="top:20%;left: 10%;" />
+            <img src="img/fot12/fot12_brazos.png" class="img-puestas" style="top:25%;left: 37%;" />
         </div>
         <div style="background-color: transparent;width:510px;height: 520px">
             <div style="background-color: transparent;text-align: right">
@@ -444,15 +444,15 @@
     <!----- FOTOGRAMA 13 ----->
     <div id="sec13" class="grid-sub-container" style="background-color:#eeeeee;height: 530px">
         <div style="background-color: transparent;position: relative;width:510px;height: 520px;max-width: 100%;margin: 0 auto;">
-            <img src="img/fot13/fot13_mujer_ESTATICO.png" class="img-puestas" style="top:0%;left: 0%;" />
-            <img src="img/fot13/fot13_agua.png" class="img-puestas" style="top:0%;left: 0%;" />
-            <img src="img/fot13/fot13_mask1.png" class="img-puestas" style="top:0%;left: 0%;" />
-            <img src="img/fot13/fot13_mask1_agua.png" class="img-puestas" style="top:0%;left: 0%;" />
-            <img src="img/fot13/fot13_mask2.png" class="img-puestas" style="top:0%;left: 0%;" />
+            <img src="img/fot13/fot13_mujer_ESTATICO.png" class="img-puestas" style="top:30%;left:10%;z-index: 4;" />
+            <!---<img src="img/fot13/fot13_agua.png" class="img-puestas" style="top:0%;left: 0%;" />-->
+            <img src="img/fot13/fot13_mask1.png" class="img-puestas" style="top:40%;left: 0%;" />
+            <img src="img/fot13/fot13_mask1_agua.png" class="img-puestas" style="top:50%;left: 0%;" />
+            <img src="img/fot13/fot13_mask2.png" class="img-puestas" style="top:20%;left: 0%;" />
             <img src="img/fot13/fot13_mask2_agua.png" class="img-puestas" style="top:0%;left: 0%;" />
             <img src="img/fot13/fot13_mask3.png" class="img-puestas" style="top:0%;left: 0%;" />
             <img src="img/fot13/fot13_mask3_agua.png" class="img-puestas" style="top:0%;left: 0%;" />
-            <img src="img/fot13/fot13_tanqueATRAS.png" class="img-puestas" style="top:0%;left: 0%;" />
+            <img src="img/fot13/fot13_tanqueATRAS.png" class="img-puestas" style="top:25%;left: 23%;z-index: 1;" />
         </div>
         <div style="background-color: transparent;width:510px;height: 520px">
             <div style="background-color: transparent;text-align: right">
